data/all_generated_tests/raw_wast_tests/loop_StackCorruption_363.wast
;; 4. **Test Description:**    - Loop that performs stack manipulation using both `call` and `br` instructions.    - **Constraint Checked:** Recursive calls within a loop correctly manage the stack.    - **Relation to Stack Corruption:** Check for corruption due to recursive stack frame management errors.    ```wasm    (module      (func $recursive  (result i32)        i32.const 5)  ;; Placeholder for actual recursion      (func (export "test") (result i32)        (local i32)        (local i32.const 0)  ;; Initialize counter        loop (result i32)          i32.const 1          call $recursive          local.tee 0          br_if 0        end        i32.const 1))    )    ```

(assert_invalid
  (module (func $recursive (result i32) (i32.const 5))
    (func (export "test") (result i32)
      (local i32)
      (i32.const 0)
      loop (result i32)
        (i32.const 1)
        call $recursive
        local.tee 0
        br_if 0
      end
      i32.const 1
    )
  )
  "type mismatch"
)